# megamanECS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README_cmake.md  README_tools.md
app/: CMakeLists.txt  MapLayer.cpp  MapLayer.h  Texture.cpp  Texture.h  boxtest.cpp  main_pong.cpp  maptest.cpp  megaman_ecs.cpp  mockup.cpp  pong.cpp  pong.h
cmake/: Warnings.cmake
dependencies/bagel/: bagel.h
docs/: Doxyfile
pong ecs demo/: CMakeLists.txt  bagel.h  main_pong.cpp  pong.cpp  pong.h
res/ase_files/: area-1.ase  boss.aseprite  enemy1.ase  lockster.aseprite  player.ase  playerC.ase
res/map/: bg.tsx  map.tmx  mega-tileset.tsx  tileset.tsx
src/: CMakeLists.txt  CameraData.cpp  CameraData.h  GlobalData.h  MTransform.cpp  MTransform.h  MapCollisionLayer.cpp  MapCollisionLayer.h  MapImageLayer.cpp  MapImageLayer.h  MapLayer.cpp  MapLayer.h  MapObjectLayer.cpp  MapObjectLayer.h  MapSpawnLayer.cpp  MapSpawnLayer.h  MapTileLayer.cpp  MapTileLayer.h  Megaman.cpp  Megaman.h  MegamanGame.cpp  MegamanGame.h  Scene.cpp  Scene.h  SpawnPoint.cpp  SpawnPoint.h  Texture.cpp  Texture.h  Transform.h  Utils.h  WorldBoundsM.h  megaman.cpp  megaman.h  megamanGame.cpp  megamanGame.h
tests/: CMakeLists.txt
tools/: run-cppcheck.py
